--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
   "dependencies": {
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
+    "gsap": "^3.11.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-tsparticles": "^2.3.3"
   },
   "devDependencies": {
     "@types/react": "^18.0.17",
